--- a/backend2/package.json
+++ b/backend2/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "backend1",
+  "name": "backend2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "dev": "npx tsc -b && node dist/index.js"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,18 +11,19 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.20.0",
-    "chess.js": "^1.0.0-beta.8",
-    "dotenv": "^16.4.5",
-    "ioredis": "^5.4.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "ws": "^8.18.0",
-    "zod": "^3.23.8"
+    "passport": "^0.7.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.7.4",
-    "@types/ws": "^8.5.12",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "@types/passport": "^1.0.16",
+    "@types/uuid": "^10.0.0"
   }
 }
