--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-icons": "^1.3.0",
+    "@clerk/nextjs": "^6.0.2",
+    "@prisma/client": "^5.21.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
     "chess.js": "^1.0.0-beta.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.10",
     "js-cookie": "^3.0.5",
-    "next": "14.2.13",
+    "lucide-react": "^0.454.0",
+    "next": "15.0.2",
     "react": "^18",
-    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
@@ -31,7 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
